# project_demo

./: .coverage  pyproject.toml
.github/workflows/: python-package.yml
src/bye_app/: bye_main.py
src/hello_app/: hello_main.py
tests/: test_*.py  test_hello_app.py
